[package]
name = "backend_axum"
version = "0.1.0"
authors = ["John Idogun <sirneij@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend_axum"

[dependencies]
# Axum specific
axum = { version = "0.6", features = ["tracing", "multipart", "macros"] }
# Tokio runtime
tokio = { version = "1", features = ["full"] }
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }
# Environment variable
dotenv = "0.15"
# Password hashing
argon2 = "0.5"
# AWS sdk
aws-config = "0.55"
aws-sdk-s3 = "0.26"
# Date and time
chrono = { version = "0.4", features = ["serde"] }
# App's configuration 
config = { version = "0.13", features = ["yaml"] }
# Redis pool
deadpool-redis = "0.11"
# Hexadecimal string encoding
hex = "0.4"
# Email sending
lettre = { version = "0.10", features = ["builder", "tokio1-native-tls"] }
# Templating
minijinja = { version = "0.32", features = ["source"] }
once_cell = "1.17"
# Secure token generation
pasetors = "0.6"
# Serialization and deserialization
serde = "1"
serde_json = { version = "1", features = ["raw_value"] }
# Database 
sqlx = { version = "0.6", features = [
    "runtime-actix-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }
